<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playlist_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistCreation">
    <LinearLayout
        android:id="@+id/view_header"
        style="@style/PageHeaderContainer"
        >
        <ImageButton
            style="@style/PageHeaderButton"
            android:src="@drawable/arrow_back"
            android:id="@+id/backBtn"
            />
        <TextView
            style="@style/PageHeaderText"
            android:text="@string/newPlaylist"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/dashed_frame"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/view_header">
        <androidx.cardview.widget.CardView style="@style/TrackCoverContainer"
            android:id="@+id/playlistCoverContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintDimensionRatio="1:1"
            android:alpha="0.0"
            >
            <ImageView
                android:id="@+id/playlistCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/uploadImageButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/upload_image"
            app:tint="@color/fg_tertiary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomOutlinedBox"
        android:id="@+id/playlistNameFieldOutline"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/imageFrame">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:singleLine="true"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomOutlinedBox"
        android:id="@+id/playlistDescriptionFieldOutline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/playlistNameFieldOutline">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:singleLine="true"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveNewPlaylistButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create"
        style="@style/ButtonColoredFullLength"
        android:alpha="0.5"
        >
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>


    <!--    app:layout_constraintWidth_percent="0.5"-->