<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/player">

    <LinearLayout
        android:id="@+id/view_header"
        style="@style/PageHeaderContainer">
        <ImageButton
            style="@style/PageHeaderButton"
            android:src="@drawable/arrow_back"
            android:id="@+id/backBtn"
            />
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView style="@style/TrackCoverContainer"
        android:id="@+id/track_cover_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@+id/view_header">
        <ImageView
            android:id="@+id/track_cover"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"

            android:scaleType="centerCrop"

            app:srcCompat="@drawable/track_img_placeholder_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        style="@style/TrackName"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/track_cover_container"
        android:id="@+id/track_name"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        />
    <TextView
        style="@style/TrackName"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/track_name"
        android:id="@+id/track_author"
        android:layout_height="wrap_content"
        />
    <LinearLayout

        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/track_length_view"
        android:id="@+id/track_controls"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToPlaylistButton"
            style="@style/SmallRoundButton"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/fg_tertiary"
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:icon="@drawable/add_playlist"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="24dp" />
        <Space style="@style/Spacer"/>

        <com.google.android.material.button.MaterialButton
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:id="@+id/media_control_button"
            style="@style/SmallRoundButton"
            android:backgroundTint="@color/fg_primary"
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:icon="@drawable/play"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="32dp"
            android:enabled="false"
            android:visibility="gone"
            />
        <ProgressBar
            android:id="@+id/trackLoadProgressBar"
            android:layout_width="72dp"
            android:layout_height="72dp"
            />

        <Space style="@style/Spacer"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favoriteButton"
            style="@style/SmallRoundButton"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:backgroundTint="@color/fg_tertiary"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/like_inactive"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="24dp" />
    </LinearLayout>
    <TextView
        style="@style/TrackDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintBottom_toTopOf="@+id/trackProgressBar"
        android:text="00:00"

        />
    <TextView
        style="@style/TrackDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/trackProgressBar"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:text="00:30"
        />
    <com.google.android.material.slider.Slider
        android:id="@+id/trackProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:labelFor="@id/leftBorder"
        android:value="30000"
        android:valueFrom="0"
        android:layout_marginBottom="10dp"

        android:valueTo="30000"
        app:haloRadius="0dp"
        app:labelBehavior="floating"

        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintBottom_toTopOf="@+id/track_controls"
        app:thumbRadius="0dp"
        app:trackHeight="8dp" />

<!--    <TextView-->
<!--        style="@style/TrackName"-->
<!--        android:id="@+id/timer"-->
<!--        app:layout_constraintStart_toStartOf="@id/leftBorder"-->
<!--        app:layout_constraintEnd_toEndOf="@id/rightBorder"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingTop="5dp"-->
<!--        android:text="00:30"-->
<!--        android:textAlignment="center"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/track_controls"-->

<!--        />-->
    <LinearLayout
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/track_collection_view"
        android:id="@+id/track_length_view"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:layout_marginVertical="10dp"
        >

        <TextView
            style="@style/TrackDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:textAlignment="center"
            />
        <Space style="@style/Spacer"/>
        <TextView
            style="@style/TrackName"
            android:id="@+id/track_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/track_year_view"
        android:id="@+id/track_collection_view"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        >

        <TextView
            style="@style/TrackDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection"
            android:textAlignment="center"
            />
        <Space style="@style/Spacer"/>
        <TextView
            style="@style/TrackName"
            android:id="@+id/track_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/track_genre_view"
        android:id="@+id/track_year_view"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        >

        <TextView
            style="@style/TrackDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textAlignment="center"
            />
        <Space style="@style/Spacer"/>
        <TextView
            style="@style/TrackName"
            android:id="@+id/track_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/track_country_view"
        android:id="@+id/track_genre_view"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        >

        <TextView
            style="@style/TrackDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textAlignment="center"
            />
        <Space style="@style/Spacer"/>
        <TextView
            style="@style/TrackName"
            android:id="@+id/track_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/track_country_view"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        >

        <TextView
            style="@style/TrackDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textAlignment="center"
            />
        <Space style="@style/Spacer"/>
        <TextView
            style="@style/TrackName"
            android:id="@+id/track_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="500dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/line" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:text="@string/addToPlaylist"
            style="@style/TrackName" />
        <Button
            android:id="@+id/createNewPlaylistButton"
            style="@style/SmallRoundButton"
            android:text="@string/newPlaylist" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>